--- a/Woopsi/documentation/about/requirements.html
+++ b/Woopsi/documentation/about/requirements.html
@@ -19,9 +19,9 @@
 
 <div id="content">
 	<h1>About Woopsi - Requirements</h1>
-	<p>In order to make use of this library, you will need devkitPro, libnds and PALib.</p>
+	<p>In order to make full use of this library you will need devkitPro and libnds.  You can optionally use PALib in addition to libnds.  To make use of the SDL layer, you will need the SDL libraries compiled for your platform and the development archive.</p>
 
-	<p>To run the project you will need either a DS emulator or a real DS and a flash cart.  I recommend a real DS and a CycloDS Evolution - where's the fun in coding for an emulator?</p>
+	<p>To run the DS build of the project you will need either a DS emulator or a real DS and a flash cart.  I recommend a real DS and a CycloDS Evolution - where's the fun in coding for an emulator?</p>
 
 	<p>You can run the demo binaries if you don't want to compile it yourself - they are in the "Demo" package.</p>
 </div>
