--- a/Woopsi/documentation/about/history.html
+++ b/Woopsi/documentation/about/history.html
@@ -18,7 +18,7 @@
 
 <div id="content">
 	<h1>About Woopsi - History</h1>
-	<p>Woopsi came about because there are no GUI libraries available for the Nintendo DS.  I was working on an AmigaGuide reader for the DS, when I realised that I was going to need some way of creating buttons, handling button presses, and scrolling buttons around within the text.  I also needed a file requester and various other GUI features.</p>
+	<p>Woopsi came about because, when I started development, there were no actively developed GUI libraries available for the Nintendo DS.  I was working on an AmigaGuide reader for the DS, when I realised that I was going to need some way of creating buttons, handling button presses, and scrolling buttons around within the text.  I also needed a file requester and various other GUI features.</p>
 	
 	<p>As I was already writing an Amiga-related piece of software, developing an Amiga-themed GUI library seemed like a good idea.</p>
 </div>
