--- a/Woopsi/documentation/developer/classes/textbox.html
+++ b/Woopsi/documentation/developer/classes/textbox.html
@@ -12,7 +12,7 @@
 		<li><a href="http://www.sourceforge.net/projects/woopsi">Woopsi</a></li>
 		<li><a href="../../index.html">Index</a></li>
 		<li><a href="window.html">Previous: Window</a></li>
-		<li><a href="textviewer.html">Next: TextViewer</a></li>
+		<li><a href="button.html">Next: Button</a></li>
 	</ul>
 	<a class="logo" href="http://sourceforge.net"><img src="http://sflogo.sourceforge.net/sflogo.php?group_id=207650&amp;type=1" width="88" height="31" border="0" alt="SourceForge.net Logo" /></a>
 </div>
