--- a/Woopsi/documentation/index.html
+++ b/Woopsi/documentation/index.html
@@ -39,7 +39,8 @@
 		<ul>
 			<li><a href="developer/introduction.html">Introduction</a></li>
 			<li><a href="developer/installation.html">Installation</a></li>
-			<li><a href="developer/project.html">Creating a Woopsi Project</a></li>
+			<li><a href="developer/projectlibnds.html">Creating a LibNDS/Woopsi Project</a></li>
+			<li><a href="developer/projectpalib.html">Creating a PALib/Woopsi Project</a></li>
 			<li><a href="developer/create.html">Creating a Simple GUI</a></li>
 			<li><a href="developer/run.html">Running the GUI</a></li>
 			<li><a href="developer/events.html">Handling Events</a></li>
@@ -52,7 +53,6 @@
 				<li><a href="developer/classes/screen.html">Screen</a></li>
 				<li><a href="developer/classes/window.html">Window</a></li>
 				<li><a href="developer/classes/textbox.html">TextBox</a></li>
-				<li><a href="developer/classes/textviewer.html">TextViewer</a></li>
 				<li><a href="developer/classes/button.html">Button</a></li>
 				<li><a href="developer/classes/superbitmap.html">SuperBitmap</a></li>
 			</ul>
