--- a/Woopsi/documentation/developer/classes/button.html
+++ b/Woopsi/documentation/developer/classes/button.html
@@ -11,7 +11,7 @@
 	<ul>
 		<li><a href="http://www.sourceforge.net/projects/woopsi">Woopsi</a></li>
 		<li><a href="../../index.html">Index</a></li>
-		<li><a href="textviewer.html">Previous: TextViewer</a></li>
+		<li><a href="textbox.html">Previous: TextBox</a></li>
 		<li><a href="superbitmap.html">Next: SuperBitmap</a></li>
 	</ul>
 	<a class="logo" href="http://sourceforge.net"><img src="http://sflogo.sourceforge.net/sflogo.php?group_id=207650&amp;type=1" width="88" height="31" border="0" alt="SourceForge.net Logo" /></a>
