--- a/Woopsi/documentation/developer/create.html
+++ b/Woopsi/documentation/developer/create.html
@@ -11,7 +11,7 @@
 	<ul>
 		<li><a href="http://www.sourceforge.net/projects/woopsi">Woopsi</a></li>
 		<li><a href="../index.html">Index</a></li>
-		<li><a href="project.html">Previous: Creating a Woopsi Project</a></li>
+		<li><a href="project.html">Previous: Creating a PALib/Woopsi Project</a></li>
 		<li><a href="run.html">Next: Running the GUI</a></li>
 	</ul>
 	<a class="logo" href="http://sourceforge.net"><img src="http://sflogo.sourceforge.net/sflogo.php?group_id=207650&amp;type=1" width="88" height="31" border="0" alt="SourceForge.net Logo" /></a>
@@ -19,7 +19,7 @@
 
 <div id="content">
 	<h1>Developer Guide - Creating a Simple GUI</h1>
-	<p>Creating a GUI is divided into four stages - creating a Woopsi object, creating screens, creating windows, and creating gadgets.</p>
+	<p>Creating a GUI is divided into four stages - initialising the Woopsi object, creating screens, creating windows, and creating gadgets.</p>
 	
 	<ul>
 		<li><a href="#woopsi">Creating a Woopsi Object</a></li>
@@ -32,12 +32,12 @@
 	<a name="woopsi"></a>
 	<h2>Creating a Woopsi Object</h2>
 
-	<p>Creating a GUI with Woopsi is simple.  To begin, we need to create an instance of the Woopsi class.  In the "main.cpp" file, in the "main()" function, add the following:</p>
+	<p>Creating a GUI with Woopsi is simple.  To begin, we need to initialise the Woopsi singleton object.  In the "main.cpp" file, in the "main()" function, add the following:</p>
 
 	<pre><code>// Create woopsi
-Woopsi woopsi;</code></pre>
+woopsiApplication = new Woopsi();</code></pre>
 
-	<p>The "woopsi" object we have created gives us our entry point into the GUI.</p>
+	<p>The "woopsiApplication" singleton object we have created gives us our entry point into the GUI.</p>
 
 	<a name="screen"></a>
 	<h2>Creating a Screen</h2>
@@ -45,25 +45,30 @@ Woopsi woopsi;</code></pre>
 	<p>Next we need to add a new screen so that we have a workspace for the interface.  To do this, we use this code:</p>
 
 	<pre><code>// Create screen
-Screen* screen = woopsi.addScreen("My Screen");</code></pre>
+AmigaScreen* screen = new AmigaScreen("My Screen");
+woopsiApplication->addGadget(screen);</code></pre>
 
-	<p>This achieves two things.  We've created a new screen within Woopsi and given it the name "My Screen" (this appears in the screen's title bar).  We've also created a pointer to the new screen that we'll need in the next step.</p>
+	<p>This achieves two things.  We've created a new screen and given it the name "My Screen" (this appears in the screen's title bar).  We've also added it to the Woopsi singleton as a child gadget.</p>
 
 	<a name="window"></a>
 	<h2>Creating a Window</h2>
 
-	<p>Now that we've got a screen, we need to add windows to it.  Windows are added to screens using this function:</p>
+	<p>Now that we've got a screen, we need to add windows to it.  Windows are added to screens in the same way:</p>
 
-	<pre><code>Window* Screen::addWindow(s16 x, s16 y, u16 width, u16 height, char* title, bool isBorderless, bool isCloseable)</code></pre>
+	<pre><code>// Create window
+AmigaWindow* window = new AmigaWindow(20, 20, 100, 100, "My Window", GADGET_DRAGGABLE);
+screen->addGadget(window);</code></pre>
+	
+	The are two differences here.  Firstly, we are creating an AmigaWindow object instead of an AmigaScreen object.  Secondly, we are adding the window to the screen instead of the woopsiApplication singleton.  This makes the window a child of the screen.
 
-	<p>The parameters are as follows:</p>
+	<p>The parameters for the AmigaWindow constructor are as follows:</p>
 
 	<table class="parameters">
 		<tr>
-			<td><em>x</em></td><td>The x co-ordinate of the top-left corner of the window</td>
+			<td><em>x</em></td><td>The x co-ordinate of the top-left corner of the window, relative to the screen that contains it</td>
 		</tr>
 		<tr>
-			<td><em>y</em></td><td>The y co-ordinate of the top-right corner of the window</td>
+			<td><em>y</em></td><td>The y co-ordinate of the top-right corner of the window, relative to the screen that contains it</td>
 		</tr>
 		<tr>
 			<td><em>width</em></td><td>The width of the window</td>
@@ -75,55 +80,51 @@ Screen* screen = woopsi.addScreen("My Screen");</code></pre>
 			<td><em>title</em></td><td>The name of the window to be displayed in its title bar</td>
 		</tr>
 		<tr>
-			<td><em>isBorderless</em></td><td>Setting this to "true" disables the blue borders and bevel box around the window</td>
-		</tr>
-		<tr>
-			<td><em>isCloseable</em></td><td>"True" enables the close gadget; "False" disables the close gadget</td>
+			<td><em>flags</em></td><td></td>
 		</tr>
 	</table>
 
 	<p>Note that although the x and y co-ordinates are entered as a signed short, these values should always be positive.  They are signed only to retain consistency with PALib's Stlyus struct.</p>
 
-	<p>To add a window to our screen:</p>
-
-	<pre><code>// Create window
-Window* window = screen->addWindow(20, 20, 100, 100, "My Window", false, true);</code></pre>
-
-	<p>This will create a window at (20, 20) and return a pointer to it, which we will use to add gadgets to the window.</p>
-
 	<a name="gadget"></a>
 	<h2>Creating a Gadget</h2>
 
-	<p>You can probably see a pattern emerging.  Each new item we create is added to the previous item.  What we are doing is building a hierarchy of GUI objects - windows belong to screens, which belong to Woopsi.</p>
+	<p>You can probably see a pattern emerging.  Each new item we create is added to the previous item.  What we are doing is building a hierarchy of GUI objects - windows belong to screens, which in turn belong to Woopsi.</p>
 
-	<p>Gadgets follow the same pattern.  There are several classes of gadget that can be added to windows, and each offers different functionality.  The classes of gadget that exist at the moment are:</p>
+	<p>All gadgets follow the same pattern.  There are several classes of gadget that can be added to windows, and each offers different functionality.  Each gadget represents a different kind of UI component.  Other classes of gadget that are available include:</p>
 
 	<ul>
 		<li><strong>Textbox</strong> - a box that will display a single line of text</li>
 		<li><strong>Button</strong> - a clickable box that displays a single line of text and that will fire an event when clicked</li>
-		<li><strong>TextViewer</strong> - a gadget that displays multiple lines of text (as many as the DS' memory will allow) that can be scrolled using the stylus</li>
-		<li><strong>SuperBitmap</strong> - provides canvas on which we can draw using a set of drawing functions; the canvas can be larger than the window, and can be scrolled with the stylus</li>
+		<li><strong>ScrollingTextBox</strong> - a gadget that displays multiple lines of text (as many as the DS' memory will allow) that can be scrolled using the stylus; it also features a vertical scrollbar</li>
+		<li><strong>SuperBitmap</strong> - provides a canvas on which we can draw using a set of drawing functions; the canvas can be larger than the window, and can be scrolled with the stylus</li>
 	</ul>
 				   
-	<p>If we want to add a button to our window, we would use this function:</p>
-
-	<pre><code>Button* Window::addButton(s16 x, s16 y, u16 width, u16 height, char* text)</code></pre>
-
-	<p>The parameters follow the same pattern as the addWindow() function above.  To add a button, we use:</p>
+	<p>If we want to add a button to our window, we would use this code:</p>
 
 	<pre><code>// Create button
-Button* button = window->addButton(5, 5, 60, 60, "Hello World!"));</code></pre>
+Button* button = new Button(5, 5, 60, 60, "Hello World!");
+window->addGadget(button);</code></pre>
 
 	<a name="summary"></a>
 	<h2>Summary</h2>
 
-	<p>In four lines of code, we've created a Woopsi instance, added a screen to it, created a window and defined a clickable button.  Extracting all of the code from the above into an easily-viewable format gives us this:</p>
+	<p>In just a few lines of code, we've created a Woopsi instance, added a screen to it, created a window and defined a clickable button.  Extracting all of the code from the above into an easily-viewable format gives us this:</p>
 
-	<pre><code>// Create a simple GUI
-Woopsi woopsi;
-Screen* screen = woopsi.addScreen("My Screen");
-Window* window = screen->addWindow(20, 20, 100, 100, "My Window", false, true);
-Button* button = window->addButton(5, 5, 60, 60, "Hello World!"));</code></pre>
+	<pre><code>// Create woopsi
+woopsiApplication = new Woopsi();
+
+// Create screen
+AmigaScreen* screen = new AmigaScreen("My Screen");
+woopsiApplication->addGadget(screen);
+
+// Create window
+AmigaWindow* window = new AmigaWindow(20, 20, 100, 100, "My Window", GADGET_DRAGGABLE);
+screen->addGadget(window);
+
+// Create button
+Button* button = new Button(5, 5, 60, 60, "Hello World!");
+window->addGadget(button);</code></pre>
 </div>
 
 </body>
