--- a/Woopsi/documentation/developer/installation.html
+++ b/Woopsi/documentation/developer/installation.html
@@ -12,7 +12,7 @@
 		<li><a href="http://www.sourceforge.net/projects/woopsi">Woopsi</a></li>
 		<li><a href="../index.html">Index</a></li>
 		<li><a href="introduction.html">Previous: Introduction</a></li>
-		<li><a href="project.html">Next: Creating a Woopsi Project</a></li>
+		<li><a href="projectlibnds.html">Next: Creating a LibNDS/Woopsi Project</a></li>
 	</ul>
 	<a class="logo" href="http://sourceforge.net"><img src="http://sflogo.sourceforge.net/sflogo.php?group_id=207650&amp;type=1" width="88" height="31" border="0" alt="SourceForge.net Logo" /></a>
 </div>
