--- a/Woopsi/documentation/developer/projectlibnds.html
+++ b/Woopsi/documentation/developer/projectlibnds.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="../styles/stylesheet.css" media="screen"/>
-	<title>Woopsi Documentation - About Woopsi - Objectives</title>
+	<title>Woopsi Documentation - Developer Guide - Creating a LibNDS/Woopsi Project</title>
 </head>
 
 <body>
@@ -11,20 +11,14 @@
 	<ul>
 		<li><a href="http://www.sourceforge.net/projects/woopsi">Woopsi</a></li>
 		<li><a href="../index.html">Index</a></li>
-		<li><a href="woopsi.html">Previous: What is Woopsi?</a></li>
-		<li><a href="features.html">Next: Features</a></li>
+		<li><a href="installation.html">Previous: Installation</a></li>
+		<li><a href="projectpalib.html">Next: Creating a PALib/Woopsi Project</a></li>
 	</ul>
 	<a class="logo" href="http://sourceforge.net"><img src="http://sflogo.sourceforge.net/sflogo.php?group_id=207650&amp;type=1" width="88" height="31" border="0" alt="SourceForge.net Logo" /></a>
 </div>
 
 <div id="content">
-	<h1>About Woopsi - Objectives</h1>
-	<p>Woopsi has three main objectives:</p>
-	<ul>
-		<li>To reduce the amount of time taken to create homebrew GUIs</li>
-		<li>To improve the quality of homebrew GUIs</li>
-		<li>To provide a standard approach to homebrew GUI creation</li>
-	</ul>
+	<h1>Developer Guide - Creating a LibNDS/Woopsi Project</h1>
 </div>
 
 </body>
